# PrismaUI-SkyrimNet-Plugin

./: .gitignore  .gitmodules  BuildRelease.ps1  CMakeLists.txt  CMakePresets.json  README.md  README.txt  vcpkg-configuration.json  vcpkg.json  xmake.lua
cmake/: CompilerFlags.cmake  ExternalDependencies.cmake  commonlibsse.cmake
include/: PrismaUI_API.h  pch.h
include/http/: HttpClient.h
include/keyhandler/: keyhandler.h
include/skyrimnet/: GameMasterController.h
include/ui/: UIBridge.h
src/: PrismaUI_API.h  PrismaUI_API_Base.h  PrismaUI_API_Inspector.h  main.cpp  pch.h  plugin.h
src/http/: HttpClient.cpp  HttpClient.h
src/keyhandler/: keyhandler.cpp
src/skyrimnet/: GameMasterController.cpp  GameMasterController.h
src/ui/: UIBridge.cpp  UIBridge.h
view/: index.html  script.js  styles.css
